src/test/ui/issues/issue-71309.stderr
error[E0308]: `?` operator has incompatible types
  --> $DIR/issue-71309.rs:2:18
   |
LL |     let y: u32 = x?;
   |                  ^^ expected `u32`, found `i32`
   |
   = note: `?` operator cannot convert from `i32` to `u32`
   = help: `?` operator unwraps `Result` or `Option` and propagates its `Err` or `None`
help: you can convert an `i32` to `u32` and panic if the converted value wouldn't fit
   |
LL |     let y: u32 = x?.try_into().unwrap();
   |                  ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
